update global css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,10 @@
 :root {
   --background: #e5e5e5;
 }
+
+@media screen and (max-width:370px) {
+  .hero-buttons {
+    flex-direction: column;
+    width: 100%;
+  }
+}
